Fix playing audio for OSC attribute 1337 and inlineMedia=1 parameter

The player was basically stuck in the QMediaPlayer::BufferingMedia
state, never playing or deleting itself. I guess this still could
happen on systems without valid audio outputs.

BUG: 490264